Add an add-opens arg for java.sql to libpeakaboo