@@ -176,6 +176,7 @@
 					    --add-opens java.base/java.util.concurrent=ALL-UNNAMED
 					    --add-opens java.base/java.net=ALL-UNNAMED
 					    --add-opens java.base/java.text=ALL-UNNAMED
+					    --add-opens java.sql/java.sql=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
